--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <header>
    <title>Blog | Hugo Burbelo</title>
 </header>
-
-
 <body>
    <p>Welcome to my blog!</p>
-</body>
+   <h3>Stuff I like:</h3>
+   <h4><b><i>Books</b></i></h4>
+   <ul>
+      <li>Harry Potter</li>
+      <li>The Ranger's Apprentice</li>
+      <li>Percy Jackson</li>
+   </ul>
 
+</body>
 </html>
