--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 <body>
    <p>Welcome to my blog!</p>
    <h3>Stuff I like:</h3>
-   <h4><b><i>Books</b></i></h4>
+   <h4>
+      <b><i>Books</b></i>
+   </h4>
    <ul>
       <li>Harry Potter</li>
       <li>The Ranger's Apprentice</li>
       <li>Percy Jackson</li>
    </ul>
+   <h4>Percy Jackson Links:</h4>
+   <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002">Seaweed Brain</a>
 
 </body>
 </html>
