--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>Percy Jackson</li>
    </ul>
    <h4>Percy Jackson Links:</h4>
-   <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002">Seaweed Brain</a>
+   <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a>
 
 </body>
 </html>
