--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <li>Percy Jackson</li>
    </ul>
    <h4>Percy Jackson Links:</h4>
-   <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a>
-   <br />
-   <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a>
+      <ul>
+         <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
+         <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
+      </ul>
+      
 
 </body>
 </html>
