--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
          <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
          <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
       </ul>
-      
+
+   <img src="__come_on__seaweed_brain_____by_faith92-d5zdmei.jpg" alt="Seaweed Brain and Wise Girl :)"
+      style="width:304px;height: 228px;">
 
 </body>
 </html>
