fix link pass a

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
       </ul>
 
-   <img src="__come_on__seaweed_brain_____by_faith92-d5zdmei.jpg" alt="Seaweed Brain and Wise Girl :)"
+   <img src="http://img06.deviantart.net/5fab/i/2015/171/c/d/__come_on__seaweed_brain_____by_faith92-d5zdmei.jpg" alt="Seaweed Brain and Wise Girl :)"
       style="width:304px;height: 228px;">
 
 </body>
