--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
       </ul>
 
-   <img src="seaweedbrain.jpg" alt="Seaweed Brain and Wise Girl :)">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)">
 
 </body>
 </html>
