fix dimen pass c

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </ul>
 
    <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="512px" height="1629px">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="256px" height="814.5px">
 1024 x 3258
 512 x 1629
+256 x 814.5
 </body>
 </html>
