--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
          <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
       </ul>
 
-   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="385.5px" height="1221.75px">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="385.5px" height="1221.75px" align="right">
 
-1024 x 3258
-512 x 1629
-256 x 814.5
-385.5 x 1221.75
 </body>
 </html>
