--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>Blog | Hugo Burbelo</title>
 </header>
 <body>
-   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="1024" height="3258" align="right">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="1024*2" height="3258*2" align="right">
    <p>Welcome to my blog!</p>
    <h3>Stuff I like:</h3>
    <h4>
