--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>Blog | Hugo Burbelo</title>
 </header>
 <body>
-   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="1024*(3/4)px" height="3258(3/4)px" align="right">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right">
    <p>Welcome to my blog!</p>
    <h2>Stuff I like:</h2>
    <h4>
