--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </header>
 <body>
    <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right">
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt augue non felis bibendum pharetra. Vivamus ultrices vehicula dolor et maximus. Mauris maximus fringilla quam, suscipit condimentum nunc gravida eu. Integer felis ipsum, mollis sed elementum cursus, finibus eu est. Phasellus ipsum elit, consectetur eu dui ut, vestibulum lobortis risus.</p>
    <p>Welcome to my blog!</p>
    <h2>Stuff I like:</h2>
    <h4>
