--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <header>
    <title>Blog | Hugo Burbelo</title>
+   <link href="style.css" type="text/css" rel="stylesheet"/>
 </header>
 <body>
    <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right">
-   
+
    <h2>Stuff I like:</h2>
    <h4>
       <b><i>Books</b></i>
@@ -15,7 +16,9 @@
       <li>The Ranger's Apprentice</li>
       <li>Percy Jackson</li>
    </ul>
-   <h4>Percy Jackson Links:</h4>
+   <h4>
+      <b><i>Percy Jackson Links:</b></i>
+   </h4>
       <ul>
          <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
          <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
