--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link href="style.css" type="text/css" rel="stylesheet"/>
 </header>
 <body>
-   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right">
+   <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right" id="img">
 
    <h2>Stuff I like:</h2>
    <h4>
