--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
    <link href="style.css" type="text/css" rel="stylesheet"/>
 </header>
 <body>
+   <h1>Hugo's Blog</h1>
+      <h4>About Me:</h4>
+      <br />
+      <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. Books, school, and rowing are my life.</p>
    <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right" id="img">
 
    <h2>Stuff I like:</h2>
-   <h4>
-      <b><i>Books</b></i>
-   </h4>
-   <ul>
-      <li>Harry Potter</li>
-      <li>The Ranger's Apprentice</li>
-      <li>Percy Jackson</li>
-   </ul>
-   <h4>
-      <b><i>Percy Jackson Links:</b></i>
-   </h4>
+      <h4>
+         <b><i>Books</b></i>
+      </h4>
       <ul>
-         <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
-         <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
+         <li>Harry Potter</li>
+         <li>The Ranger's Apprentice</li>
+         <li>Percy Jackson</li>
       </ul>
+      <h4>
+         <b><i>Percy Jackson Links:</b></i>
+      </h4>
+         <ul>
+            <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
+            <li> <a href="http://www.hypable.com/favorite-percabeth-moments-far/1/" target="_blank">Cutest Percabeth Moments</a> </li>
+         </ul>
 
 
 </body>
