--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <h1>Hugo's Blog</h1>
       <h4>About Me:</h4>
-      <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. Books, school, and rowing are my life.</p>
+      <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. <br/> Books, school, and rowing are my life.</p>
    <img src="seaweed_brain.jpg" alt="Seaweed Brain and Wise Girl :)" width="768px" height="2443.5px" align="right" id="img">
 
    <h2>Stuff I like:</h2>
