--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
    <link href="style.css" type="text/css" rel="stylesheet"/>
 </header>
 <body>
-   <h1>Hugo's Blog</h1>
+   <h1>
+      <b><u>Hugo's Blog</b></u>
+   </h1>
       <h2>About Me:</h3>
       <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. <br /> Books, school, and rowing are my life.</p>
    <h2>Stuff I like:</h3>
