--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link href="style.css" type="text/css" rel="stylesheet"/>
 </header>
 <body>
-   <h1>
+   <h1 id="main_title">
       <b><u>Hugo's Blog</b></u>
    </h1>
       <h2>About Me:</h3>
