align header center

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </header>
 <body>
    <h1 id="main_title">
-      <b><u>Hugo's Blog</b></u>
+      <u>Hugo's Blog</b>
    </h1>
       <h2>About Me:</h3>
       <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. <br /> Books, school, and rowing are my life.</p>
