--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. <br /> Books, school, and rowing are my life.</p>
    <h2>Stuff I like:</h3>
       <h4>
-         <b><i>Books</b></i>
+         <b><i> - Books</b></i>
       </h4>
       <ul>
          <li>Harry Potter</li>
@@ -20,7 +20,7 @@
          <li>Percy Jackson</li>
       </ul>
       <h4>
-         <b><i>Percy Jackson Links:</b></i>
+         <b><i> - Percy Jackson Links:</b></i>
       </h4>
          <ul>
             <li> <a href="http://faith92.deviantart.com/art/Come-on-Seaweed-Brain-361753002" target="_blank">Seaweed Brain</a> </li>
