--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Hugo's Blog
    </h1>
       <h2>About Me:</h3>
-      <p>I'm an apiring entrepreneur and coder who loves everything Harry Potter. <br /> Books, school, and rowing are my life.</p>
+      <p>I'm an aspiring entrepreneur and coder who loves everything Harry Potter. <br /> Books, school, and rowing are my life.</p>
    <h2>Stuff I like:</h3>
       <h4>
          <b><i> - Books</b></i>
